[tool.poetry]
name = "libgen_uploader"
version = "0.1.0"
description = "A Library Genesis ebook uploader"
authors = ["Francesco Truzzi <francesco@truzzi.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
robobrowser = "^0.5.3"
Cerberus = "^1.3.2"
returns = "0.16.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pytest-recording = "^0.11.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
